# nekomimi-gameboy-emulator

./: .gitignore  CMakeLists.txt  README.md  build.sh  cpu-test.cc  debug.out  run.sh  runtime-manual  test_cpu.out
doc/: README.md  moneyfish.md
src/: cartridge.cc  cartridge.h  cpu.cc  cpu.h  emulator-form.cc  emulator-form.h  gpu.cc  gpu.h  joypad.cc  joypad.h  main.cc  memory.cc  memory.h  miscellaneous.cc  miscellaneous.h  motherboard.cc  motherboard.h  ppu.cc  ppu.h  register.cc  register.h  timer.cc  timer.h
test/: cpu-test.cc  cpu_demo.cc  emulator-form-test.cc  memory-test.cc  register-test.cc
